--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@huggingface/inference": "^3.7.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -25,6 +26,7 @@
     "mongoose": "^8.7.2",
     "next": "^15.0.3",
     "next-auth": "^4.24.8",
+    "openai": "^4.93.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
