--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "groq-sdk": "^0.19.0",
     "lucide-react": "^0.454.0",
     "mongodb": "^3.7.4",
     "mongoose": "^8.7.2",
